  * Added support for time zone-aware datetime instances in lsl.common.datetime_to_mjdmpm() and mjdmpm_to_datetime()
  * Dropped the requirement that a beam be specified in lsl.common.sdf and sdfADP
  * Fixed a deadlock condition that could occur during a DRXFile.offset()
  * Fixed a bug in the DRXFile when dealing with small gaps in the data

2.0.0
  * Major API changes to put LSL under a uniform coding style
  * Bumped the minimum Python version to 2.7
  * Bumped the mininum SciPy version to 0.13
  * Replaced PyFITS with astropy.io.fits
  * Removed support for 32-bit systems in the lsl.common modules
  * Added a new lsl.imaging.data module and classes to help store visibility data
  * Added a new extension to speed up w-projection gridding
  * Merged the non-windowed and windowed functions in the lsl.correlator extensions to de-duplicate some of the codebase
  * Added support for reading CASA measurement sets with multiple spectral windows
  * Added test suites for CASA measurement set support when the 'casacore' module is found
  * Added support for astorpy.units.quantity.Quantity instances to lsl.misc.rfutil
  * Updated the AIPY version requirement to >=3.0.1
  * Updated the scipy version requirement to >=0.19
  * Removed lsl.misc.mathutil.savitzky_golay since it was added in scipy v0.14.0+
  * Added support for collecting usage data for LSL via lsl.misc.telemetry
  * Updated to lsl.misc.ionosphere to IGRF13
  * Dropped support for PyFFTW

1.2.6
  * Fixed a bug in the lsl.reader.ldp classes that causes offset() to fail in certain cases

1.2.5
  * Updated setup.py to make it more likely that clang will build OpenMP-enabled extensions
  * Updated the install documentation to recommend pip
  * Added a 4-tap + Hanning windowed polyphase filter bank to the various functions in lsl.correlator.fx
  * Added an option to use the new PFB in correlateTBN and correlateTBW
  * Added an option to use the new PFB in drxSpectra, tbnSpectra, and tbwSpectra